<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing.ThirdLandingFragment">

    <TextView
        android:id="@+id/pilih_peran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|top"
        android:text="@string/pilih_peran"
        android:textColor="#001E2B"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pilihlah_peran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:text="@string/pilih_peran_subtitle"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/pilih_peran"
        app:layout_constraintTop_toBottomOf="@+id/pilih_peran" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/landing_page_3_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilihlah_peran" />


    <TextView
        android:id="@+id/masuk_instansi_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:text="@string/masuk_sebagai"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/title_instansi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:text="@string/instansi_rumah_sakit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/masuk_instansi_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/masuk_instansi_subtitle" />

    <Button
        android:id="@+id/masuk_instansi"
        android:layout_width="110dp"
        android:textSize="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/landing_button"
        android:text="@string/masuk"
        app:layout_constraintStart_toStartOf="@+id/title_instansi"
        app:layout_constraintTop_toBottomOf="@+id/title_instansi" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/landing_page_3_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/masuk_guest_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:text="@string/masuk_sebagai"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/title_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:text="@string/pengguna_biasa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/masuk_guest_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/masuk_guest_subtitle" />

    <Button
        android:id="@+id/masuk_guest"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/landing_button"
        android:text="@string/masuk"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@+id/title_guest"
        app:layout_constraintTop_toBottomOf="@+id/title_guest" />

</androidx.constraintlayout.widget.ConstraintLayout>


